# react-native-markdown

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  TODO.md  package.json  react-native-markdown.podspec
android/: build.gradle
android/src/main/jni/: CMakeLists.txt  md4c-jni.c  parser-jni.cpp  parser-jni.h
android/src/main/jni/parser/: parser-jni.cpp
cpp/: parser.cpp  parser.h
cpp/parser/: parser.cpp  parser.h
ios/: RTNMarkdown.h  RTNMarkdown.mm  RTNMarkdownAttributeWrapper.h  RTNMarkdownAttributeWrapper.mm  RTNMarkdownAttributes.h  RTNMarkdownAttributes.mm  RTNMarkdownBlockquoteLayoutFragment.h  RTNMarkdownBlockquoteLayoutFragment.mm  RTNMarkdownComponentProps.h  RTNMarkdownComponentProps.mm  RTNMarkdownComponentView.h  RTNMarkdownComponentView.mm  RTNMarkdownFormatter.h  RTNMarkdownFormatter.mm  RTNMarkdownInput.h  RTNMarkdownInput.mm  RTNMarkdownInputComponentView.h  RTNMarkdownInputComponentView.mm  RTNMarkdownInputManager.mm  RTNMarkdownLayoutHelper.h  RTNMarkdownLayoutHelper.mm  RTNMarkdownManager.mm  RTNMarkdownParagraphTextView.h  RTNMarkdownParagraphTextView.mm  RTNMarkdownTextContentStorageDelegate.h  RTNMarkdownTextContentStorageDelegate.mm  RTNMarkdownTextLayoutManagerDelegate.h  RTNMarkdownTextLayoutManagerDelegate.mm  RTNMarkdownUITextView.h  RTNMarkdownUITextView.mm
ios/md4c/: md4c.h  md4c.m
js/: MarkdownInput.tsx  MarkdownTextInput.tsx  RTNMarkdownInputNativeComponent.ts  RTNMarkdownNativeComponent.ts  global.d.ts  index.tsx  types.ts
js/MarkdownText/: index.tsx  index.web.tsx
js/MarkdownTextInput/: index.tsx  (+2 more)
scripts/: prepare.sh
(+22 files in other folders)
